# dagster-tutorial

./: .gitignore  __main__.py  docker-compose.yml  pyproject.toml  setup.cfg  workspace.yaml
catfacts/: __init__.py  jobs.py
catfacts/assets/: __init__.py
catfacts/assets/airflow_metadata/: dagrun.py
catfacts/assets/cats/: catfacts.py  facts.py  first_fact.py
catfacts/assets/gsheets/: raw_data_for_people_kpis.py
catfacts/assets/redshift/: data_for_people_kpis.py  data_for_people_kpis_no_partition.py
catfacts/assets/tableau/: tableau.py
catfacts/libraries/dagster_gsheet/: assets_factory.py  configurable_query_resources.py  gsheet_resources.py
catfacts/resources/: __init__.py  api_config.py  api_resource.py  metadata_input_manager.py  s3_config.py  s3_pd_csv_io_manager.py  s3_pd_parquet_io_manager.py  s3_stream_string_io_manager.py  s3_string_io_manager.py
catfacts/sensors/: redshift.py  tableau_sensors.py
docker/: Dockerfile
